--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,41 +2,63 @@ version: '3.8'
 
 services:
   mariadb:
-    image: mariadb
+    build: ./mariadb
+    restart: always
     environment:
-      MYSQL_ROOT_PASSWORD: votre_mot_de_passe
-      MYSQL_DATABASE: nom_de_votre_base_de_donnees
+      MYSQL_ROOT_PASSWORD: YOUR_ROOT_PASSWORD_HERE
+      MYSQL_USER:  YOUR_MYSQL_USER_HERE 
+      MYSQL_PASSWORD: YOUR_USER_PW_HERE
+    expose:
+        - "40000"
+    ports:
+        - "40000:3306"
     volumes:
-      - db_data:/var/lib/mysql
+     - db_data:/var/lib/mysql
     networks:
-      - backend
+      backend:
+              
+  phpmyadmin:
+    image: phpmyadmin
+    restart: always
+    expose:
+      - "40001"
+    ports:
+      - "40001:80"
+    environment:
+      - PMA_HOST=mariadb
+      - PMA_PORT=3306 
+    networks:
+      backend:
 
   nodejs1:
-    image: votre_image_nodejs
+    build: ./back
+    restart: always
     depends_on:
       - mariadb
     networks:
       - backend
-
-  nodejs2:
-    image: votre_image_nodejs
-    depends_on:
-      - mariadb
-    networks:
-      - backend
-
-  nginx:
-    image: nginx
-    ports:
-      - "80:80"
-      - "443:443"
     volumes:
-      - ./nginx.conf:/etc/nginx/nginx.conf
-    depends_on:
-      - nodejs1
-      - nodejs2
-    networks:
-      - backend
+      - ./back:/usr/src/app
+
+  # nodejs2:
+  #   image: votre_image_nodejs
+  #   depends_on:
+  #     - mariadb
+  #   networks:
+  #     - backend
+
+  # nginx:
+  #   image: nginx
+  #   ports:
+  #     - "80:80"
+  #     - "443:443"
+  #   volumes:
+  #     - ./nginx.conf:/etc/nginx/nginx.conf
+  #   depends_on:
+  #     - nodejs1
+  #     - nodejs2
+  #   networks:
+  #     - backend
 
 networks:
   backend:
