--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,7 +36,7 @@ services:
     depends_on:
       - mariadb
     networks:
-      - backend
+      backend:
     # volumes:
     #   - ./back:/usr/src/app
 
