--- a/mariadb/Dockerfile
+++ b/mariadb/Dockerfile
@@ -5,13 +5,10 @@ FROM mariadb:10.6
 # COPY my-custom.cnf /etc/mysql/conf.d/
 
 # Copier le script d'initialisation pour créer des utilisateurs
-COPY ./initdb-script.sh /docker-entrypoint-initdb.d/
+COPY ./initdb-script.sh ./docker-entrypoint-initdb.sh
 
 # Copier le script SQL pour créer la table
-COPY create-nest-table.sql /path/to/create-table-nest.sql
-
-# Copier le script d'initialisation
-COPY initdb-script.sh /docker-entrypoint-initdb.d/
+COPY create-nest-table.sql create-table-nest.sql
 
 # Exposer le port de MariaDB
 EXPOSE 3306
@@ -21,4 +18,4 @@ VOLUME ["/var/lib/mysql"]
 
 # Utiliser le script de démarrage par défaut de MariaDB
 CMD ["mysqld"]
-CMD ["initdb-script.sh"]
+# CMD ["docker-entrypoint-initdb.sh"]
