--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -47,18 +47,17 @@ services:
   #   networks:
   #     - backend
 
-  # nginx:
-  #   image: nginx
-  #   ports:
-  #     - "80:80"
-  #     - "443:443"
-  #   volumes:
-  #     - ./nginx.conf:/etc/nginx/nginx.conf
-  #   depends_on:
-  #     - nodejs1
-  #     - nodejs2
-  #   networks:
-  #     - backend
+  nginx:
+    build: 
+      context: ./Nginx
+    ports:
+      - "80:80"
+      - "443:443"
+    volumes:
+      - ./Nginx/nginx.conf:/etc/nginx/nginx.conf
+    depends_on:
+      - nodejs1
+      # - nodejs2
 
 networks:
   backend:
