--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,18 +5,20 @@ services:
     build: ./mariadb
     restart: always
     environment:
-      MYSQL_ROOT_PASSWORD: YOUR_ROOT_PASSWORD_HERE
-      MYSQL_USER:  YOUR_MYSQL_USER_HERE 
-      MYSQL_PASSWORD: YOUR_USER_PW_HERE
+      MYSQL_ROOT_PASSWORD: root
+      MYSQL_DATABASE: devsecops
+      MYSQL_USER: admin
+      MYSQL_PASSWORD: admin
     expose:
         - "40000"
     ports:
         - "40000:3306"
     volumes:
      - db_data:/var/lib/mysql
+     - ./init-db:/docker-entrypoint-initdb.d
     networks:
       backend:
-              
+
   phpmyadmin:
     image: phpmyadmin
     restart: always
@@ -33,8 +35,13 @@ services:
   nodejs1:
     build: ./back
     restart: always
+    expose:
+      - "40002"
+    ports:
+      - "40002:3000"
     depends_on:
-      - mariadb
+      mariadb:
+        condition: service_started
     networks:
       backend:
     # volumes:
