--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -54,16 +54,16 @@ services:
   #   networks:
   #     - backend
 
-  nginx:
-    build: 
-      context: ./Nginx
-    ports:
-      - "80:80"
-      - "443:443"
-    volumes:
-      - ./Nginx/nginx.conf:/etc/nginx/nginx.conf
-    depends_on:
-      - nodejs1
+  # nginx:
+  #   build: 
+  #     context: ./Nginx
+  #   ports:
+  #     # - "80:80"
+  #     - "443:443"
+  #   volumes:
+  #     - ./Nginx/nginx.conf:/etc/nginx/nginx.conf
+  #   depends_on:
+  #     - nodejs1
       # - nodejs2
 
 networks:
