modification config mariadb

--- a/back/config.env
+++ b/back/config.env
@@ -3,8 +3,8 @@ PORT=3000
 
 DB_HOST=mariadb
 DB_PORT=3306
-DB_USERNAME=root
-DB_PASSWORD=root
+DB_USERNAME=app_user
+DB_PASSWORD=app_password
 DB_NAME=devsecops
 # IF YOU DON'T USE A SOCKET JUST LEAVE DB_SOCKET EMPTY
 DB_SOCKET=
