--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,8 @@ services:
     volumes:
       - db_data:/var/lib/mysql
       - ./mariadb:/docker-entrypoint-initdb.d
+      - ./encryption.cnf:/etc/mysql/conf.d/encryption.cnf
+      - ./keys.enc:/etc/mysql/conf.d/keys.enc
     networks:
       backend:
 
