config nginx et load-balancing

--- a/Nginx/nginx.conf
+++ b/Nginx/nginx.conf
@@ -1,14 +1,19 @@
+worker_processes 1;
+
+events { worker_connections 1024; }
+
 http {
     upstream nodejs_app {
-        server nodejs1:3000;
-        server nodejs2:3001;
+        least_conn;
+        server nodejs1:3000 max_conns=1;
+        server nodejs2:3000;
     }
 
     server {
         listen 80;
         listen [::]:80;
 
-        server_name votre_domaine.com;
+        server_name devsecops_domain;
 
         location / {
             proxy_pass http://nodejs_app;
