nginx http => https

--- a/Nginx/nginx.conf
+++ b/Nginx/nginx.conf
@@ -3,17 +3,25 @@ worker_processes 1;
 events { worker_connections 1024; }
 
 http {
+    server {
+        listen 80;
+        listen [::]:80;
+        server_name localhost;
+        return 301 https://$host$request_uri;
+    }
+
     upstream nodejs_app {
         least_conn;
-        server nodejs1:3000 max_conns=1;
+        server nodejs1:3000;
         server nodejs2:3000;
     }
 
     server {
-        listen 80;
-        listen [::]:80;
+        listen 443 ssl;
+        server_name localhost;
 
-        server_name devsecops_domain;
+        ssl_certificate     /etc/nginx/certs/nginx-selfsigned.crt;
+        ssl_certificate_key /etc/nginx/certs/nginx-selfsigned.key;
 
         location / {
             proxy_pass http://nodejs_app;
