--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -69,6 +69,7 @@ services:
       - "443:443"
     volumes:
       - ./Nginx/nginx.conf:/etc/nginx/nginx.conf
+      - ./Nginx/certs:/etc/nginx/certs
     depends_on:
       - nodejs1
       - nodejs2
